codex-rs/tui2/src/snapshots/codex_tui2__model_migration__tests__model_migration_prompt.snap
---
source: tui2/src/model_migration.rs
expression: terminal.backend()
---

> Try gpt-5.1-codex-max

  We recommend switching from gpt-5.1-codex-mini to
  gpt-5.1-codex-max.

  Latest Codex-optimized flagship for deep and fast
  reasoning.

  You can continue using gpt-5.1-codex-mini if you prefer.

  Choose how you'd like Codex to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
