codex-rs/tui2/src/snapshots/codex_tui2__model_migration__tests__model_migration_prompt_gpt5_codex.snap
---
source: tui2/src/model_migration.rs
expression: terminal.backend()
---

> Try gpt-5.1-codex-max

  We recommend switching from gpt-5-codex to
  gpt-5.1-codex-max.

  Latest Codex-optimized flagship for deep and fast
  reasoning.

  Press enter to continue
